--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -3267,6 +3267,7 @@
         <item>lockdown</item>
         <item>torch</item>
         <!--<item>bugreport</item>-->
+        <item>onthego</item>
     </string-array>
 
     <!-- Number of milliseconds to hold a wake lock to ensure that drawing is fully
