--- a/packages/SystemUI/res/values/colt_config.xml
+++ b/packages/SystemUI/res/values/colt_config.xml
@@ -84,4 +84,7 @@
 
     <!-- Allow devices to hide ringer button above volume slider -->
     <bool name="config_hideRingerButton">false</bool>
+
+    <!-- Whether to use the mask for the quicksettings icons-->
+    <bool name="config_useMaskForQs">true</bool>
 </resources>
