--- a/packages/SystemUI/res/values-night/colors.xml
+++ b/packages/SystemUI/res/values-night/colors.xml
@@ -118,4 +118,6 @@
     <color name="qs_tile_oos_background">#DBDBDB</color>
 
     <color name="qs_tile_oos">#222222</color>
+
+    <color name="qs_tile_icon_oos">#98a098</color>
 </resources>
