Default gradient colors
Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/core/res/res/values-night/colt_colors.xml
+++ b/core/res/res/values-night/colt_colors.xml
@@ -18,5 +18,9 @@
   -->
 <resources>
 
+<!-- Gradient Shit -->
+    <color name="gradient_start">#ff8ab4f8</color>
+    <color name="gradient_end">#ff8ab4f8</color>
+
 </resources>
 
