--- a/core/res/res/values/colt_colors.xml
+++ b/core/res/res/values/colt_colors.xml
@@ -21,6 +21,10 @@
     <color name="accent_overlay_device_default_light">#fefefe</color>
     <color name="accent_overlay_device_default_dark">#fefefe</color>
 
+    <!-- Gradient Shit -->
+    <color name="gradient_start">#ff1a73e8</color>
+    <color name="gradient_end">#ff1a73e8</color>
+
 </resources>
 
 
