Squashed QSPanel style and design changes
QSPanel: Design changes

* Switch to rounded rectangular tiles
* Slim designed brightness bar

Signed-off-by: StarkDroid <gamerprince.exp@gmail.com>
Signed-off-by: str-br <alexfinhart@gmail.com>

Add QS Panel Styles [1/3]

Note for other roms:
This is the jankiest possible implementation that DOES WORK but is more of an extra work.
Ideally i'd like to have this implemented within in-line ThemeOverLayApplier and ThemeOverlayController but rather
its being handled through settings with a custom observer at the moment to trigger the overlays.

So why this impl?
I was just curious to test this out, but once i saw that its implemented and is working, i decided to push it and work on the refinement later

Feel free to do the refinement on your end if you are able to :D

Signed-off-by: StarkDroid <gamerprince.exp@gmail.com>

Partial Revert "QSPanel: Design changes"

Prepping this for QS Panel Styles

This reverts commit ef0c7cabca565e8ff4b2f24d5023c8ce9d51f030.

QSTile: More slower & Gradual QS Fade-in/out animation

Signed-off-by: StarkDroid <gamerprince.exp@gmail.com>

QS Tile: Set ripple color to accent by default

Signed-off-by: StarkDroid <gamerprince.exp@gmail.com>

QS Tile: Make QS Ripple animation more prominent

Signed-off-by: StarkDroid <gamerprince.exp@gmail.com>
Signed-off-by: str-br <alexfinhart@gmail.com>

QS Panel: Add Two-Tone Accented QS Style [1/3]

Inspired by Fluid-UI's QS Panel changes

Signed-off-by: Trishiraj <gamerprince.exp@gmail.com>

QS Styles: Add QS tiles color pop [1/2]

Signed-off-by: Trishiraj <gamerprince.exp@gmail.com>

QSPanel Styles: Add key into backup and validator

Signed-off-by: Trishiraj <gamerprince.exp@gmail.com>
Signed-off-by: str-br <alexfinhart@gmail.com>

QS Style: Make Outline QS Style truly outline

Signed-off-by: Trishiraj <gamerprince.exp@gmail.com>
Signed-off-by: str-br <alexfinhart@gmail.com>
Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/packages/SystemUI/res/drawable/brightness_bg.xml
+++ b/packages/SystemUI/res/drawable/brightness_bg.xml
@@ -14,10 +14,9 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/qs_ripple_color">
-    <item android:id="@android:id/mask"
-        android:drawable="@drawable/qs_tile_background_shape" />
-    <item android:id="@id/background"
-        android:drawable="@drawable/qs_tile_background_shape"/>
-</ripple>
+
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="@dimen/rounded_slider_corner_radius" />
+    <solid android:color="?android:attr/colorAccent" />
+    <size android:width="@dimen/rounded_slider_height" android:height="@dimen/rounded_slider_height" />
+</shape>
