--- a/packages/SystemUI/res/values-night/colt_colors.xml
+++ b/packages/SystemUI/res/values-night/colt_colors.xml
@@ -12,5 +12,6 @@
      limitations under the License.
 -->
 <resources>
+    <color name="footer_actions_bg">@android:color/system_neutral1_900</color>
     <color name="volume_row_bg">@android:color/system_accent2_600</color>
 </resources>
