--- a/packages/SystemUI/res/values/colt_colors.xml
+++ b/packages/SystemUI/res/values/colt_colors.xml
@@ -12,6 +12,7 @@
      limitations under the License.
 -->
 <resources>
+    <color name="footer_actions_bg">@android:color/system_neutral1_50</color>
     <color name="accent_device_default_light">@*android:color/system_accent1_600</color>
     <color name="qs_ripple_color">@android:color/system_accent1_400</color>
     <color name="volume_row_bg">@android:color/system_accent2_200</color>
