QS Styles: two tone: QS improvements
Signed-off-by: str-br <alexfinhart@gmail.com>
Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>

--- a/packages/SystemUI/res/values-night/colt_colors.xml
+++ b/packages/SystemUI/res/values-night/colt_colors.xml
@@ -13,5 +13,6 @@
 -->
 <resources>
     <color name="footer_actions_bg">@android:color/system_neutral1_900</color>
+    <color name="qs_translucent_bg">#0FFFFFFF</color>
     <color name="volume_row_bg">@android:color/system_accent2_600</color>
 </resources>
